Creacion html de las paginas

--- a/index.html
+++ b/index.html
@@ -1,1 +1,212 @@
-prueba
+<doctype html>
+
+	<html lang="es">
+	
+		<head>
+			<meta charset="utf-8">
+			<meta name="viewport" content="width=device-width, initial-scale=1">
+			<link rel="shortcut icon" href="https://www.youtube.com/s/desktop/12d6b690/img/favicon.ico">
+	
+			<title>Título</title>
+			<meta name="description" content="descripción de la web, se recomienda 90 caracteres">
+			<meta name="keywords"    content="palabras clave, separadas, por comas">
+		 
+			<link href="style/app.css" rel="stylesheet"> 
+		</head>
+	
+	   
+		<body>
+			<!-- Header -->
+			<header>
+				<!-- Logotipo -->
+				<div class="header-logo">
+					<div class="header-logo-img">
+						<svg></svg>
+					</div>
+					<div class="header-logo-text">
+						<span>Nombre</span>
+					</div>
+				</div>
+				<!-- FIN Logotipo -->
+				<!-- Menu de navegacion -->
+				<nav class="header-nav">
+					<ul>
+						<li></li>
+						<li></li>
+						<li></li>
+					</ul>
+				</nav>
+				<!-- FIN Menu de navegacion -->
+			</header>
+			<!-- FIN Header -->
+			<!-- Main -->
+			<main>
+				<!-- Slider -->
+				<div class="slider">
+					<div class="slider-img">
+						<img src="" alt="">
+					</div>
+					<div class="slider-info">
+						<div class="slider-info-title">
+							<h1></h1>
+						</div>
+						<div class="slider-info-cta">
+							<button></button>
+						</div>
+					</div>
+				</div>
+				<!-- Seccion de destacados -->
+				<div class="container-featured">
+					<div class="featured">
+						<div class="featured-title">
+							<h2></h2>
+						</div>
+						<div class="featured-items">
+							<!-- un destacado -->
+							<div class="featured-item">
+								<!-- imagen destacado -->
+								<div class="featured-item-img">
+									<img src="" alt="">
+								</div>
+								<!-- FIN imagen destacado -->
+								<!-- Titulo destacado -->
+								<div class="feaured-item-title">
+									<h2></h2>
+								</div>
+								<!-- FIN Titulo destacado -->
+								<!-- Categoria destacado -->
+								<div class="featured-item-category">
+									<p></p>
+								</div>
+								<!-- FIN Categoria destacado -->
+								<!-- Descripcion destacado -->
+								<div class="featured-item-description">
+									<p></p>
+								</div>
+								<!-- FIN Descripcion destacado -->
+								<!-- Precio item -->
+								<div class="featured-item-price">
+									<p></p>
+								</div>
+								<!-- FIN precio item -->
+							</div>
+							<!-- FIN un destacado -->
+							<!-- un destacado -->
+							<div class="featured-item">
+								<!-- imagen destacado -->
+								<div class="featured-item-img">
+									<img src="" alt="">
+								</div>
+								<!-- FIN imagen destacado -->
+								<!-- Titulo destacado -->
+								<div class="feaured-item-title">
+									<h2></h2>
+								</div>
+								<!-- FIN Titulo destacado -->
+								<!-- Categoria destacado -->
+								<div class="featured-item-category">
+									<p></p>
+								</div>
+								<!-- FIN Categoria destacado -->
+								<!-- Descripcion destacado -->
+								<div class="featured-item-description">
+									<p></p>
+								</div>
+								<!-- FIN Descripcion destacado -->
+								<!-- Precio item -->
+								<div class="featured-item-price">
+									<p></p>
+								</div>
+								<!-- FIN precio item -->
+							</div>
+							<!-- FIN un destacado -->
+							<!-- un destacado -->
+							<div class="featured-item">
+								<!-- imagen destacado -->
+								<div class="featured-item-img">
+									<img src="" alt="">
+								</div>
+								<!-- FIN imagen destacado -->
+								<!-- Titulo destacado -->
+								<div class="feaured-item-title">
+									<h2></h2>
+								</div>
+								<!-- FIN Titulo destacado -->
+								<!-- Categoria destacado -->
+								<div class="featured-item-category">
+									<p></p>
+								</div>
+								<!-- FIN Categoria destacado -->
+								<!-- Descripcion destacado -->
+								<div class="featured-item-description">
+									<p></p>
+								</div>
+								<!-- FIN Descripcion destacado -->
+								<!-- Precio item -->
+								<div class="featured-item-price">
+									<p></p>
+								</div>
+								<!-- FIN precio item -->
+							</div>
+							<!-- FIN un destacado -->
+							<!-- un destacado -->
+							<div class="featured-item">
+								<!-- imagen destacado -->
+								<div class="featured-item-img">
+									<img src="" alt="">
+								</div>
+								<!-- FIN imagen destacado -->
+								<!-- Titulo destacado -->
+								<div class="feaured-item-title">
+									<h2></h2>
+								</div>
+								<!-- FIN Titulo destacado -->
+								<!-- Categoria destacado -->
+								<div class="featured-item-category">
+									<p></p>
+								</div>
+								<!-- FIN Categoria destacado -->
+								<!-- Descripcion destacado -->
+								<div class="featured-item-description">
+									<p></p>
+								</div>
+								<!-- FIN Descripcion destacado -->
+								<!-- Precio item -->
+								<div class="featured-item-price">
+									<p></p>
+								</div>
+								<!-- FIN precio item -->
+							</div>
+							<!-- FIN un destacado -->
+						</div>
+					
+					</div>
+				</div>
+				<!-- FIN Seccion de destacados -->
+				<!-- Seccion un anuncio -->
+				<div class="container-banner">
+					<div class="banner">
+						<!-- Descripcion anuncio -->
+						<div class="banner-description">
+							<p></p>
+						</div>
+						<!-- FIN Descripcion anuncio -->
+						<!-- Imagen anuncio -->
+						<div class="banner-img">
+							<img src="" alt="">
+						</div>
+						<!-- FIN Imagen anuncio -->
+					</div>
+				</div>
+				<!-- FIN Seccion un anuncio -->
+			</main>
+			<!-- FIN main -->
+			<!-- Footer -->
+			<footer>
+				<p></p>
+				<p></p>
+			</footer>
+			<!-- FIN footer -->
+		</body>
+	
+	</html>
