Iniciamos el css

--- a/checkout.html
+++ b/checkout.html
@@ -51,9 +51,9 @@
                     <!-- Resumen y pago -->
                     <div class="">
                         <!-- Resumen compra -->
-                        <div class=""> 
+                        <div class="resum-card"> 
                             <div class="">
-                                <h2></h2>
+                                <h2 class=""resum-card-title></h2>
                             </div>
                             <div>
                                 <div>
