--- a/contacto.html
+++ b/contacto.html
@@ -11,7 +11,8 @@
 			<meta name="description" content="descripción de la web, se recomienda 90 caracteres">
 			<meta name="keywords"    content="palabras clave, separadas, por comas">
 		 
-			<link href="style/app.css" rel="stylesheet"> 
+			<link href="style/app.css" rel="stylesheet">
+			<link rel="stylesheet" href="style/bootstrap-grid.css">
 		</head>
 	
 	   
@@ -19,11 +20,17 @@
 			<!-- Header -->
 			<header>
 				<!-- Logotipo -->
-				<div class="">
+				<div class="header-logo">
+					<div class="header-logo-img">
+						<svg></svg>
+					</div>
+					<div class="header-logo-text">
+						<span>Nombre</span>
+					</div>
 				</div>
 				<!-- FIN Logotipo -->
 				<!-- Menu de navegacion -->
-				<nav>
+				<nav class="header-nav">
 					<ul>
 						<li></li>
 						<li></li>
@@ -35,13 +42,13 @@
 			<!-- FIN Header -->
 			<!-- Main -->
 			<main>
-                <div class="contacto">
+                <div class="contact">
                     <!-- h1 -->
-                    <div class="">
+                    <div class="contact-title">
                         <h1></h1>
                     </div>
                     <!-- info + formulario -->
-                    <div class="">
+                    <div class="contact">
                         <!-- info -->
                         <div class="">
                             <!-- info-item -->
