--- a/index.html
+++ b/index.html
@@ -11,32 +11,39 @@
 			<meta name="description" content="descripción de la web, se recomienda 90 caracteres">
 			<meta name="keywords"    content="palabras clave, separadas, por comas">
 		 
-			<link href="style/app.css" rel="stylesheet"> 
+			<link href="style/app.css" rel="stylesheet">
+			<link href="style/bootstrap-grid.css" rel="stylesheet"> 
 		</head>
 	
 	   
 		<body>
 			<!-- Header -->
 			<header>
-				<!-- Logotipo -->
-				<div class="header-logo">
-					<div class="header-logo-img">
-						<svg></svg>
-					</div>
-					<div class="header-logo-text">
-						<span>Nombre</span>
+				<div class="container-fluid">
+					<div class="row">
+						<!-- Logotipo -->
+						<div class="col-2 header-logo">
+							<div class="row">
+								<div class="col header-logo-img">
+									<img src="img/vegan-logo.svg" alt="">
+								</div>
+								<div class="col header-logo-text">
+									<span>Restaurant</span>
+								</div>
+							</div>
+						</div>
+						<!-- FIN Logotipo -->
+						<!-- Menu de navegacion -->
+						<nav class="col header-nav">
+							<ul>
+								<li>Home</li>
+								<li>Productos</li>
+								<li>Contacto</li>
+							</ul>
+						</nav>
+						<!-- FIN Menu de navegacion -->
 					</div>
 				</div>
-				<!-- FIN Logotipo -->
-				<!-- Menu de navegacion -->
-				<nav class="header-nav">
-					<ul>
-						<li></li>
-						<li></li>
-						<li></li>
-					</ul>
-				</nav>
-				<!-- FIN Menu de navegacion -->
 			</header>
 			<!-- FIN Header -->
 			<!-- Main -->
@@ -44,7 +51,7 @@
 				<!-- Slider -->
 				<div class="slider">
 					<div class="slider-img">
-						<img src="" alt="">
+						<img src="img\pexels-adonyi-gábor-1414651.jpg" alt="">
 					</div>
 					<div class="slider-info">
 						<div class="slider-info-title">
@@ -56,147 +63,142 @@
 					</div>
 				</div>
 				<!-- Seccion de destacados -->
-				<div class="container-featured">
-					<div class="featured">
-						<div class="featured-title">
-							<h2></h2>
+				<div class="featured">
+					<div class="featured-title">
+						<h2></h2>
+					</div>
+					<div class="featured-items">
+						<!-- un destacado -->
+						<div class="featured-item">
+							<!-- imagen destacado -->
+							<div class="featured-item-img">
+								<img src="" alt="">
+							</div>
+							<!-- FIN imagen destacado -->
+							<!-- Titulo destacado -->
+							<div class="feaured-item-title">
+								<h2></h2>
+							</div>
+							<!-- FIN Titulo destacado -->
+							<!-- Categoria destacado -->
+							<div class="featured-item-category">
+								<p></p>
+							</div>
+							<!-- FIN Categoria destacado -->
+							<!-- Descripcion destacado -->
+							<div class="featured-item-description">
+								<p></p>
+							</div>
+							<!-- FIN Descripcion destacado -->
+							<!-- Precio item -->
+							<div class="featured-item-price">
+								<p></p>
+							</div>
+							<!-- FIN precio item -->
 						</div>
-						<div class="featured-items">
-							<!-- un destacado -->
-							<div class="featured-item">
-								<!-- imagen destacado -->
-								<div class="featured-item-img">
-									<img src="" alt="">
-								</div>
-								<!-- FIN imagen destacado -->
-								<!-- Titulo destacado -->
-								<div class="feaured-item-title">
-									<h2></h2>
-								</div>
-								<!-- FIN Titulo destacado -->
-								<!-- Categoria destacado -->
-								<div class="featured-item-category">
-									<p></p>
-								</div>
-								<!-- FIN Categoria destacado -->
-								<!-- Descripcion destacado -->
-								<div class="featured-item-description">
-									<p></p>
-								</div>
-								<!-- FIN Descripcion destacado -->
-								<!-- Precio item -->
-								<div class="featured-item-price">
-									<p></p>
-								</div>
-								<!-- FIN precio item -->
+						<!-- FIN un destacado -->
+						<!-- un destacado -->
+						<div class="featured-item">
+							<!-- imagen destacado -->
+							<div class="featured-item-img">
+								<img src="" alt="">
 							</div>
-							<!-- FIN un destacado -->
-							<!-- un destacado -->
-							<div class="featured-item">
-								<!-- imagen destacado -->
-								<div class="featured-item-img">
-									<img src="" alt="">
-								</div>
-								<!-- FIN imagen destacado -->
-								<!-- Titulo destacado -->
-								<div class="feaured-item-title">
-									<h2></h2>
-								</div>
-								<!-- FIN Titulo destacado -->
-								<!-- Categoria destacado -->
-								<div class="featured-item-category">
-									<p></p>
-								</div>
-								<!-- FIN Categoria destacado -->
-								<!-- Descripcion destacado -->
-								<div class="featured-item-description">
-									<p></p>
-								</div>
-								<!-- FIN Descripcion destacado -->
-								<!-- Precio item -->
-								<div class="featured-item-price">
-									<p></p>
-								</div>
-								<!-- FIN precio item -->
+							<!-- FIN imagen destacado -->
+							<!-- Titulo destacado -->
+							<div class="feaured-item-title">
+								<h2></h2>
 							</div>
-							<!-- FIN un destacado -->
-							<!-- un destacado -->
-							<div class="featured-item">
-								<!-- imagen destacado -->
-								<div class="featured-item-img">
-									<img src="" alt="">
-								</div>
-								<!-- FIN imagen destacado -->
-								<!-- Titulo destacado -->
-								<div class="feaured-item-title">
-									<h2></h2>
-								</div>
-								<!-- FIN Titulo destacado -->
-								<!-- Categoria destacado -->
-								<div class="featured-item-category">
-									<p></p>
-								</div>
-								<!-- FIN Categoria destacado -->
-								<!-- Descripcion destacado -->
-								<div class="featured-item-description">
-									<p></p>
-								</div>
-								<!-- FIN Descripcion destacado -->
-								<!-- Precio item -->
-								<div class="featured-item-price">
-									<p></p>
-								</div>
-								<!-- FIN precio item -->
+							<!-- FIN Titulo destacado -->
+							<!-- Categoria destacado -->
+							<div class="featured-item-category">
+								<p></p>
 							</div>
-							<!-- FIN un destacado -->
-							<!-- un destacado -->
-							<div class="featured-item">
-								<!-- imagen destacado -->
-								<div class="featured-item-img">
-									<img src="" alt="">
-								</div>
-								<!-- FIN imagen destacado -->
-								<!-- Titulo destacado -->
-								<div class="feaured-item-title">
-									<h2></h2>
-								</div>
-								<!-- FIN Titulo destacado -->
-								<!-- Categoria destacado -->
-								<div class="featured-item-category">
-									<p></p>
-								</div>
-								<!-- FIN Categoria destacado -->
-								<!-- Descripcion destacado -->
-								<div class="featured-item-description">
-									<p></p>
-								</div>
-								<!-- FIN Descripcion destacado -->
-								<!-- Precio item -->
-								<div class="featured-item-price">
-									<p></p>
-								</div>
-								<!-- FIN precio item -->
+							<!-- FIN Categoria destacado -->
+							<!-- Descripcion destacado -->
+							<div class="featured-item-description">
+								<p></p>
 							</div>
-							<!-- FIN un destacado -->
+							<!-- FIN Descripcion destacado -->
+							<!-- Precio item -->
+							<div class="featured-item-price">
+								<p></p>
+							</div>
+							<!-- FIN precio item -->
 						</div>
-					
+						<!-- FIN un destacado -->
+						<!-- un destacado -->
+						<div class="featured-item">
+							<!-- imagen destacado -->
+							<div class="featured-item-img">
+								<img src="" alt="">
+							</div>
+							<!-- FIN imagen destacado -->
+							<!-- Titulo destacado -->
+							<div class="feaured-item-title">
+								<h2></h2>
+							</div>
+							<!-- FIN Titulo destacado -->
+							<!-- Categoria destacado -->
+							<div class="featured-item-category">
+								<p></p>
+							</div>
+							<!-- FIN Categoria destacado -->
+							<!-- Descripcion destacado -->
+							<div class="featured-item-description">
+								<p></p>
+							</div>
+							<!-- FIN Descripcion destacado -->
+							<!-- Precio item -->
+							<div class="featured-item-price">
+								<p></p>
+							</div>
+							<!-- FIN precio item -->
+						</div>
+						<!-- FIN un destacado -->
+						<!-- un destacado -->
+						<div class="featured-item">
+							<!-- imagen destacado -->
+							<div class="featured-item-img">
+								<img src="" alt="">
+							</div>
+							<!-- FIN imagen destacado -->
+							<!-- Titulo destacado -->
+							<div class="feaured-item-title">
+								<h2></h2>
+							</div>
+							<!-- FIN Titulo destacado -->
+							<!-- Categoria destacado -->
+							<div class="featured-item-category">
+								<p></p>
+							</div>
+							<!-- FIN Categoria destacado -->
+							<!-- Descripcion destacado -->
+							<div class="featured-item-description">
+								<p></p>
+							</div>
+							<!-- FIN Descripcion destacado -->
+							<!-- Precio item -->
+							<div class="featured-item-price">
+								<p></p>
+							</div>
+							<!-- FIN precio item -->
+						</div>
+						<!-- FIN un destacado -->
 					</div>
 				</div>
 				<!-- FIN Seccion de destacados -->
 				<!-- Seccion un anuncio -->
-				<div class="container-banner">
-					<div class="banner">
-						<!-- Descripcion anuncio -->
-						<div class="banner-description">
-							<p></p>
-						</div>
-						<!-- FIN Descripcion anuncio -->
-						<!-- Imagen anuncio -->
-						<div class="banner-img">
-							<img src="" alt="">
-						</div>
-						<!-- FIN Imagen anuncio -->
+				<div class="banner">
+					<!-- Descripcion anuncio -->
+					<div class="banner-description">
+						<p></p>
 					</div>
+					<!-- FIN Descripcion anuncio -->
+					<!-- Imagen anuncio -->
+					<div class="banner-img">
+						<img src="" alt="">
+					</div>
+					<!-- FIN Imagen anuncio -->
 				</div>
 				<!-- FIN Seccion un anuncio -->
 			</main>
