--- a/productos.html
+++ b/productos.html
@@ -19,11 +19,17 @@
 			<!-- Header -->
 			<header>
 				<!-- Logotipo -->
-				<div class="">
+				<div class="header-logo">
+					<div class="header-logo-img">
+						<svg></svg>
+					</div>
+					<div class="header-logo-text">
+						<span>Nombre</span>
+					</div>
 				</div>
 				<!-- FIN Logotipo -->
 				<!-- Menu de navegacion -->
-				<nav>
+				<nav class="header-nav">
 					<ul>
 						<li></li>
 						<li></li>
@@ -36,11 +42,10 @@
 			<!-- Main -->
 			<main>
 				<!-- Categorias -->
-				<aside>
+				<aside class="products-category">
 					<h2></h2>
-					<nav>
+					<nav class="products-category-nav">
 						<ul>
-							<div></div>
 							<li></li>
 							<li></li>
 							<li></li>
@@ -51,139 +56,50 @@
 				</aside>
 				<!-- FIN Categorias -->
 				<!-- Seccion de productos -->
-				<div class="">
-					<div class="">	
+				<div class="content-wrapper">
+					<div class="products-resaults">	
 						<!-- Nro de productos -->
-						<div class="">
+						<div class="products-resaults-counter">
 							<p></p>
 						</div>
 						<!-- FIN nro de productos -->
 						<!-- Selector -->
-						<div class="">
-							<form action="">
-								<select name="" id="">
-									<option value="0">0</option>
-									<option value="1">1</option>
-									<option value="2">2</option>
-									<option value="3">3</option>
-								</select>
-							</form>
+						<div class="products-resaults-selector">
+							<select name="" id="">
+								<option value="0">0</option>
+								<option value="1">1</option>
+								<option value="2">2</option>
+								<option value="3">3</option>
+							</select>
 						</div>
 						<!-- FIN selector -->
 					</div>
 					<!-- Listado de productos -->
-					<div>
-						<ul>
-							<!-- Un producto -->
-							<div class="">
-								<!-- imagen -->
+					<div class="products-gallery">
+						<!-- Un producto -->
+						<div class="products-gallery-item">
+							<!-- imagen -->
+							<div class="products-gallery-img">
 								<img src="" alt="">
-								<!-- FIN imagen -->
-								<!-- Descripcion producto -->
-								<P></P>
-								<!-- FIN Descripcion producto -->
-								<!-- boton -->
-								<button class=""></button>
-								<!-- FIN boton -->
-                                <!-- Precio/dia -->
-                                <div class="">
-                                    <p></p>
-                                </div>
-                                <!-- FIN Precio/dia -->
 							</div>
-							<!-- FIN un producto -->
-							<!-- Un producto -->
-							<div class="">
-								<!-- imagen -->
-								<img src="" alt="">
-								<!-- FIN imagen -->
-								<!-- Descripcion producto -->
+							<!-- FIN imagen -->
+							<!-- Descripcion producto -->
+							<div class="products-gallery-titular">
 								<P></P>
-								<!-- FIN Descripcion producto -->
-								<!-- boton -->
-								<button class=""></button>
-								<!-- FIN boton -->
-                                <!-- Precio/dia -->
-                                <div class="">
-                                    <p></p>
-                                </div>
-                                <!-- FIN Precio/dia -->
 							</div>
-							<!-- FIN un producto -->
-							<!-- Un producto -->
-							<div class="">
-								<!-- imagen -->
-								<img src="" alt="">
-								<!-- FIN imagen -->
-								<!-- Descripcion producto -->
-								<P></P>
-								<!-- FIN Descripcion producto -->
-								<!-- boton -->
-								<button class=""></button>
-								<!-- FIN boton -->
-                                <!-- Precio/dia -->
-                                <div class="">
-                                    <p></p>
-                                </div>
-                                <!-- FIN Precio/dia -->
+							<!-- FIN Descripcion producto -->
+							<!-- boton -->
+							<div class="products-gallery-cta">
+								<button></button>
 							</div>
-							<!-- FIN un producto -->
-							<!-- Un producto -->
-							<div class="">
-								<!-- imagen -->
-								<img src="" alt="">
-								<!-- FIN imagen -->
-								<!-- Descripcion producto -->
-								<P></P>
-								<!-- FIN Descripcion producto -->
-								<!-- boton -->
-								<button class=""></button>
-								<!-- FIN boton -->
-                                <!-- Precio/dia -->
-                                <div class="">
-                                    <p></p>
-                                </div>
-                                <!-- FIN Precio/dia -->
+							<!-- FIN boton -->
+							<!-- Precio/dia -->
+							<div class="products-gallery-price">
+								<p></p>
 							</div>
-							<!-- FIN un producto -->
-							<!-- Un producto -->
-							<div class="">
-								<!-- imagen -->
-								<img src="" alt="">
-								<!-- FIN imagen -->
-								<!-- Descripcion producto -->
-								<P></P>
-								<!-- FIN Descripcion producto -->
-								<!-- boton -->
-								<button class=""></button>
-								<!-- FIN boton -->
-                                <!-- Precio/dia -->
-                                <div class="">
-                                    <p></p>
-                                </div>
-                                <!-- FIN Precio/dia -->
-							</div>
-							<!-- FIN un producto -->
-							<!-- Un producto -->
-							<div class="">
-								<!-- imagen -->
-								<img src="" alt="">
-								<!-- FIN imagen -->
-								<!-- Descripcion producto -->
-								<P></P>
-								<!-- FIN Descripcion producto -->
-								<!-- boton -->
-								<button class=""></button>
-								<!-- FIN boton -->
-                                <!-- Precio/dia -->
-                                <div class="">
-                                    <p></p>
-                                </div>
-                                <!-- FIN Precio/dia -->
-							</div>
-							<!-- FIN un producto -->
-
-						</ul>
+							<!-- FIN Precio/dia -->
+						</div>
+						<!-- FIN un producto -->
 					</div>
 					<!-- FIN listado de productos -->
 				</div>
