CSS productos y producto

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 				<div class="container-fluid">
 					<div class="row justify-content-between h-100">
 						<!-- Logotipo -->
-						<div class="col-2 header-logo h-100">
-							<div class="row">
+						<div class="col-2 header-logo">
+							<div class="row align-items-center">
 								<div class="col header-logo-img p-1">								
 									<svg version="1.1"
 									id="svg2" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape" xmlns:ns1="http://sozi.baierouge.fr" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd" xmlns:svg="http://www.w3.org/2000/svg"
@@ -166,150 +166,167 @@
 					</div>
 				</div>
 				<!-- Seccion de destacados -->
-				<div class="featured">
-					<div class="featured-title">
-						<h2></h2>
-					</div>
-					<div class="featured-items">
-						<!-- un destacado -->
-						<div class="featured-item">
-							<!-- imagen destacado -->
-							<div class="featured-item-img">
-								<img src="" alt="">
-							</div>
-							<!-- FIN imagen destacado -->
-							<!-- Titulo destacado -->
-							<div class="feaured-item-title">
-								<h2></h2>
-							</div>
-							<!-- FIN Titulo destacado -->
-							<!-- Categoria destacado -->
-							<div class="featured-item-category">
-								<p></p>
-							</div>
-							<!-- FIN Categoria destacado -->
-							<!-- Descripcion destacado -->
-							<div class="featured-item-description">
-								<p></p>
-							</div>
-							<!-- FIN Descripcion destacado -->
-							<!-- Precio item -->
-							<div class="featured-item-price">
-								<p></p>
-							</div>
-							<!-- FIN precio item -->
+				<div class="container section">
+					<div class="card">
+						<div class="row card-title">
+							<h2 class="color-principal">Nuestros productos destacados</h2>
 						</div>
-						<!-- FIN un destacado -->
-						<!-- un destacado -->
-						<div class="featured-item">
-							<!-- imagen destacado -->
-							<div class="featured-item-img">
-								<img src="" alt="">
+						<div class="row card-items">
+							<!-- un destacado -->
+							<div class="col-3">
+								<div class="card-item ">
+									<!-- imagen destacado -->
+									<div class="card-item-img">
+										<img src="img/ensalada-tpmate.jpg" alt="">
+									</div>
+									<!-- FIN imagen destacado -->
+									<!-- Titulo destacado -->
+									<div class="card-item-title">
+										<h3 class="color-principal">Ensalada de tomate con tortilla</h3>
+									</div>
+									<!-- FIN Titulo destacado -->
+									<!-- Categoria destacado -->
+									<div class="card-item-category">
+										<p>Ensaladas</p>
+									</div>
+									<!-- FIN Categoria destacado -->
+									<!-- Descripcion destacado -->
+									<div class="card-item-description">
+										<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae assumenda obcaecati nisi magnam quam ut.</p>
+									</div>
+									<!-- FIN Descripcion destacado -->
+									<!-- Precio item -->
+									<div class="card-item-price">
+										<p>9 €</p>
+									</div>
+									<!-- FIN precio item -->
+								</div>
 							</div>
-							<!-- FIN imagen destacado -->
-							<!-- Titulo destacado -->
-							<div class="feaured-item-title">
-								<h2></h2>
+							<!-- FIN un destacado -->
+							<!-- un destacado -->
+							<div class="col-3">
+								<div class="card-item h-100">
+									<!-- imagen destacado -->
+									<div class="card-item-img">
+										<img src="img/espaguetti.jpg" alt="">
+									</div>
+									<!-- FIN imagen destacado -->
+									<!-- Titulo destacado -->
+									<div class="featured-item-title">
+										<h3 class="color-principal">Espaguettis con verduras variadas</h3>
+									</div>
+									<!-- FIN Titulo destacado -->
+									<!-- Categoria destacado -->
+									<div class="card-item-category">
+										<p>Pastas</p>
+									</div>
+									<!-- FIN Categoria destacado -->
+									<!-- Descripcion destacado -->
+									<div class="card-item-description">
+										<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos possimus odio delectus ullam, alias libero. Molestiae, qui. Eveniet deleniti ullam eligendi dolor eius fugiat.</p>
+									</div>
+									<!-- FIN Descripcion destacado -->
+									<!-- Precio item -->
+									<div class="card-item-price">
+										<p>12 €</p>
+									</div>
+									<!-- FIN precio item -->
+								</div>
 							</div>
-							<!-- FIN Titulo destacado -->
-							<!-- Categoria destacado -->
-							<div class="featured-item-category">
-								<p></p>
+							<!-- FIN un destacado -->
+							<!-- un destacado -->
+							<div class="col-3">
+								<div class="card-item h-100">
+									<!-- imagen destacado -->
+									<div class="card-item-img">
+										<img src="img/tostadas.jpg" alt="">
+									</div>
+									<!-- FIN imagen destacado -->
+									<!-- Titulo destacado -->
+									<div class="featured-item-title">
+										<h3 class="color-principal">Ensalada de tomate y tortilla</h3>
+									</div>
+									<!-- FIN Titulo destacado -->
+									<!-- Categoria destacado -->
+									<div class="card-item-category">
+										<p>Sandwiches</p>
+									</div>
+									<!-- FIN Categoria destacado -->
+									<!-- Descripcion destacado -->
+									<div class="card-item-description">
+										<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae assumenda obcaecati nisi magnam quam ut.</p>
+									</div>
+									<!-- FIN Descripcion destacado -->
+									<!-- Precio item -->
+									<div class="card-item-price">
+										<p>6.5 €</p>
+									</div>
+									<!-- FIN precio item -->
+								</div>
 							</div>
-							<!-- FIN Categoria destacado -->
-							<!-- Descripcion destacado -->
-							<div class="featured-item-description">
-								<p></p>
+							<!-- FIN un destacado -->
+							<!-- un destacado -->
+							<div class="col-3">
+								<div class="card-item h-100">
+									<!-- imagen destacado -->
+									<div class="card-item-img">
+										<img src="img/tomate-aguacate.jpg" alt="">
+									</div>
+									<!-- FIN imagen destacado -->
+									<!-- Titulo destacado -->
+									<div class="featured-item-title">
+										<h3 class="color-principal">Ensalada de tomate y tortilla</h3>
+									</div>
+									<!-- FIN Titulo destacado -->
+									<!-- Categoria destacado -->
+									<div class="card-item-category">
+										<p>Tortitas</p>
+									</div>
+									<!-- FIN Categoria destacado -->
+									<!-- Descripcion destacado -->
+									<div class="card-item-description">
+										<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut ratione qui nulla debitis? Earum obcaecati saepe enim qui, quos placeat.</p>
+									</div>
+									<!-- FIN Descripcion destacado -->
+									<!-- Precio item -->
+									<div class="card-item-price">
+										<p>8 €</p>
+									</div>
+									<!-- FIN precio item -->
+								</div>
 							</div>
-							<!-- FIN Descripcion destacado -->
-							<!-- Precio item -->
-							<div class="featured-item-price">
-								<p></p>
-							</div>
-							<!-- FIN precio item -->
+							<!-- FIN un destacado -->
 						</div>
-						<!-- FIN un destacado -->
-						<!-- un destacado -->
-						<div class="featured-item">
-							<!-- imagen destacado -->
-							<div class="featured-item-img">
-								<img src="" alt="">
-							</div>
-							<!-- FIN imagen destacado -->
-							<!-- Titulo destacado -->
-							<div class="feaured-item-title">
-								<h2></h2>
-							</div>
-							<!-- FIN Titulo destacado -->
-							<!-- Categoria destacado -->
-							<div class="featured-item-category">
-								<p></p>
-							</div>
-							<!-- FIN Categoria destacado -->
-							<!-- Descripcion destacado -->
-							<div class="featured-item-description">
-								<p></p>
-							</div>
-							<!-- FIN Descripcion destacado -->
-							<!-- Precio item -->
-							<div class="featured-item-price">
-								<p></p>
-							</div>
-							<!-- FIN precio item -->
-						</div>
-						<!-- FIN un destacado -->
-						<!-- un destacado -->
-						<div class="featured-item">
-							<!-- imagen destacado -->
-							<div class="featured-item-img">
-								<img src="" alt="">
-							</div>
-							<!-- FIN imagen destacado -->
-							<!-- Titulo destacado -->
-							<div class="feaured-item-title">
-								<h2></h2>
-							</div>
-							<!-- FIN Titulo destacado -->
-							<!-- Categoria destacado -->
-							<div class="featured-item-category">
-								<p></p>
-							</div>
-							<!-- FIN Categoria destacado -->
-							<!-- Descripcion destacado -->
-							<div class="featured-item-description">
-								<p></p>
-							</div>
-							<!-- FIN Descripcion destacado -->
-							<!-- Precio item -->
-							<div class="featured-item-price">
-								<p></p>
-							</div>
-							<!-- FIN precio item -->
-						</div>
-						<!-- FIN un destacado -->
 					</div>
 				</div>
 				<!-- FIN Seccion de destacados -->
 				<!-- Seccion un anuncio -->
-				<div class="banner">
-					<!-- Descripcion anuncio -->
-					<div class="banner-description">
-						<p></p>
+				
+				<div class="section banner-image-back">
+					<div class="container banner align-items-center">
+						<!-- Descripcion anuncio -->
+						<div class="row">
+							<div class="col-5">
+								<div class="banner-description">
+									<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse, dolores? Et repudiandae eius aut quia. Illo suscipit iure adipisci voluptatum praesentium similique perspiciatis, error molestiae voluptatem deserunt, facilis fugit pariatur atque laudantium et omnis ut, fuga facere! Labore non et quis voluptatum esse consequatur recusandae sed ratione minus quo. Nostrum, iusto neque! Quia nemo illum maiores facere ab itaque. Vitae ex numquam libero nam sunt impedit, fuga fugit consequuntur doloribus dolores. Cumque dolores voluptatem minus!</p>
+								</div>
+								<!-- FIN Descripcion anuncio -->
+								<!-- Imagen anuncio -->
+								<div class="banner-img">
+									<img src="" alt="">
+								</div>
+								<!-- FIN Imagen anuncio -->
+							</div>
+						</div>
 					</div>
-					<!-- FIN Descripcion anuncio -->
-					<!-- Imagen anuncio -->
-					<div class="banner-img">
-						<img src="" alt="">
-					</div>
-					<!-- FIN Imagen anuncio -->
+					<!-- FIN Seccion un anuncio -->
 				</div>
-				<!-- FIN Seccion un anuncio -->
 			</main>
 			<!-- FIN main -->
 			<!-- Footer -->
 			<footer>
-				<p></p>
-				<p></p>
+				<p>© 2022</p>
+				<p><a href="#">Ves a donde quieras</a></p>
 			</footer>
 			<!-- FIN footer -->
 		</body>
