--- a/productos.html
+++ b/productos.html
@@ -291,7 +291,7 @@
 									<!-- FIN un producto -->
 									<!-- un producto -->
 									<div class="col-4 products-gallery-item card mb-4">
-										<div .carclass="card-item h-100">
+										<div class="card-item h-100">
 											<!-- imagen destacado -->
 											<div class="card-item-img">
 												<img src="img/garbanzos.jpg" alt="">
