Formulario de contacto

--- a/contacto.html
+++ b/contacto.html
@@ -26,7 +26,7 @@
 					<div class="row justify-content-between h-100">
 						<!-- Logotipo -->
 						<div class="col-2 header-logo">
-							<div class="row align-items-center">
+							<div class="row h-100 align-items-center">
 								<div class="col header-logo-img p-1">								
 									<svg version="1.1"
 									id="svg2" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape" xmlns:ns1="http://sozi.baierouge.fr" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd" xmlns:svg="http://www.w3.org/2000/svg"
@@ -158,8 +158,8 @@
                     </div>
                     <!-- info + formulario -->
 					<div class="row mt-5">
+						<!-- info -->
                     	<div class="col-6 contact contact-info">
-							<!-- info -->
 							<div class="row flex-column">
 								<!-- info-item -->
 								<div class="col-12">
@@ -197,8 +197,8 @@
 								</div>
 							</div>
 						</div>
+						<!-- FIN info -->
 
-                        <!-- FIN info -->
                         <!-- Contacto form -->
                         <form action="" class="col-6">
 							<div class="row">
@@ -223,19 +223,23 @@
 									<textarea name="mensaje" id="mensaje" class="mt-1"></textarea>
 								</div>
 							</div>
+							<!-- FIN info + formulario -->
+							<!-- info boton -->
+							<div>
+								<button class="btn btn-principal comprar mt-3">
+									ENVIAR
+								</button>
+								<button class="btn btn-secondary comprar mt-3">
+									CANCELAR
+								</button>
+							</div>
+							<!-- FIN info boton -->
                         </form>
+						<!-- FIN Contacto form -->
 					</div>
-                        <!-- FIN Contacto form -->
-                    </div>
-                    <!-- FIN info + formulario -->
-                    <!-- info boton -->
-                    <div>
-                        <button>
-                            
-                        </button>
-                    </div>
-                    <!-- FIN info boton -->
+					<!-- FIN info + formulario -->
                 </div>
+            </div>
 			</main>
 			<!-- FIN main -->
 			<!-- Footer -->
